# accel-typeinfo

./: CMakeLists.txt  README.md
include/accel/: typeinfo
tests/: CMakeLists.txt  typeinfo-tests.cpp
